oxiplate-derive/tests/broken/char/eof-instead-of-char.stderr
error: Expected `\'`, `\\`, or a single char followed by `'`.
 --> tests/broken/char/eof-instead-of-char.rs:4:24
  |
4 | #[oxiplate_inline(r"{{ '")]
  |                        ^
